...
                    Image("Icon")
                    Image("Logo")
                        .padding()
                }
                EntryFieldView(placeHolder: "Email address", field: $email, imageName: "person.fill")
                    .keyboardType(.emailAddress)
                    .accessibilityIdentifier("emailTextField")
                PasswordEntryFieldView(password: $password, placeHolder: "Password")
                
                RedButton(
                    title: "Sign in with email",
                    action: {
                        viewModel.onLoginAction(
...
                    showPopover = true
                }
                .fontWeight(.bold)
                .popover(isPresented: $showPopover) {
                    RegistrationView(showPopover: $showPopover, viewModel: viewModel.registrationViewModel)
                }
                .accessibilityIdentifier("signUpButton")
            }
            .padding(.horizontal, 40)
        }
        .alert(isPresented: $viewModel.showingAlert) {
            Alert(
                title: Text("An Error occured"),
...
